compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_divide_complex_expr.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  case 1.0 >=. 0.0 {\n    True -> 2.0\n    False -> 4.0\n  } /. 2.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  case 1.0 >=. 0.0 {
    True -> 2.0
    False -> 4.0
  } /. 2.0
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) divideFloat;
  
  go =
    { }: divideFloat (let _pat' = 1.0 >= 0.0; in if _pat' then 2.0 else 4.0) 2.0;
in
{ }
