compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_equality.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  1.0 != 2.0\n  1.0 == 2.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  1.0 != 2.0
  1.0 == 2.0
}


----- COMPILED NIX
let go = { }: let _' = 1.0 != 2.0; in builtins.seq _' (1.0 == 2.0); in { }
