compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_equality1.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go(y) {\n  let x = 1.0\n  x == y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(y) {
  let x = 1.0
  x == y
}


----- COMPILED NIX
let go = y: let x = 1.0; in x == y; in { }
