compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_literals.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n    1.5\n    2.0\n    -0.1\n    1.\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    1.5
    2.0
    -0.1
    1.
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go = { }: let _' = 1.5; _'1 = 2.0; _'2 = -0.1; in seqAll [ _' _'1 _'2 ] 1.;
in
{ }
