compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_operators.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n    1.0 +. 1.4 // => 2.4\n    5.0 -. 1.5 // => 3.5\n    5.0 /. 2.0 // => 2.5\n    3.0 *. 3.1 // => 9.3\n    \n    2.0 >. 1.0  // => True\n    2.0 <. 1.0  // => False\n    2.0 >=. 1.0 // => True\n    2.0 <=. 1.0 // => False\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) divideFloat seqAll;
  
  go =
    { }:
    let
      _' = 1.0 + 1.4;
      _'1 = 5.0 - 1.5;
      _'2 = divideFloat 5.0 2.0;
      _'3 = 3.0 * 3.1;
      _'4 = 2.0 > 1.0;
      _'5 = 2.0 < 1.0;
      _'6 = 2.0 >= 1.0;
    in
    seqAll [ _' _'1 _'2 _'3 _'4 _'5 _'6 ] (2.0 <= 1.0);
in
{ }
