compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__float_scientific_literals.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n    0.01e-1\n    0.01e-0\n    -10.01e-1\n    -10.01e-0\n    100.001e523\n    -100.001e-523\n    100.001e123_456_789\n    -100.001e-123_456_789\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go =
    { }:
      let
        _' = 0.01e-1;
        _'1 = 0.01e-0;
        _'2 = -10.01e-1;
        _'3 = -10.01e-0;
        _'4 = 100.001e523;
        _'5 = -100.001e-523;
        _'6 = 100.001e123456789;
      in seqAll [ _' _'1 _'2 _'3 _'4 _'5 _'6 ] (-100.001e-123456789);
in { }
