compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_divide_complex_expr.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } / 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  case 1 >= 0 {
    True -> 2
    False -> 4
  } / 2
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) divideInt;
  
  go = { }: divideInt (let _pat' = 1 >= 0; in if _pat' then 2 else 4) 2;
in
{ }
