compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_equality.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  1 != 2\n  1 == 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  1 != 2
  1 == 2
}


----- COMPILED NIX
let go = { }: let _' = 1 != 2; in builtins.seq _' (1 == 2); in { }
