compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_equality1.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go(y) {\n  let x = 1\n  x == y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(y) {
  let x = 1
  x == y
}


----- COMPILED NIX
let go = y: let x = 1; in x == y; in { }
