compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_literals.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n    1\n    2\n    -3\n    4001\n    0b00001111\n    0o17\n    0xF\n    1_000\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) parseNumber seqAll;
  
  go =
    { }:
      let
        _' = 1;
        _'1 = 2;
        _'2 = -3;
        _'3 = 4001;
        _'4 = parseNumber "0b00001111";
        _'5 = parseNumber "0o17";
        _'6 = parseNumber "0xF";
      in seqAll [ _' _'1 _'2 _'3 _'4 _'5 _'6 ] 1000;
in { }
