compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_negation.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  let a = 3\n  let b = -a\n}\n"
---
let go = {}: let a = 3; in -a; in {}
