compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_operators.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n    1 + 1 // => 2\n    5 - 1 // => 4\n    5 / 2 // => 2\n    3 * 3 // => 9\n    5 % 2 // => 1\n    2 > 1  // => True\n    2 < 1  // => False\n    2 >= 1 // => True\n    2 <= 1 // => False\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    1 + 1 // => 2
    5 - 1 // => 4
    5 / 2 // => 2
    3 * 3 // => 9
    5 % 2 // => 1
    2 > 1  // => True
    2 < 1  // => False
    2 >= 1 // => True
    2 <= 1 // => False
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) remainderInt divideInt seqAll;
  
  go =
    { }:
    let
      _' = 1 + 1;
      _'1 = 5 - 1;
      _'2 = divideInt 5 2;
      _'3 = 3 * 3;
      _'4 = remainderInt 5 2;
      _'5 = 2 > 1;
      _'6 = 2 < 1;
      _'7 = 2 >= 1;
    in
    seqAll [ _' _'1 _'2 _'3 _'4 _'5 _'6 _'7 ] (2 <= 1);
in
{ }
